--- a/Common.css
+++ b/Common.css
@@ -31,6 +31,16 @@ body{
   padding-bottom: 60px;
 }
 
+div[class=item_txt] .txt {/* class=item_txt の div の下の txtクラス*/
+  margin:0;
+  text-align:left;
+  padding-bottom: 60px;
+}
+
+div[class=item_txt] .ttl{/* class=item_txt の div の下の ttlクラス*/
+  text-align: left;
+}
+
 img{
   max-width: 100%;
 }
@@ -118,4 +128,12 @@ div#footerArea {/*div の内 id=footerArea であるもの*/
     font-size: 18px;
     line-height: 20px;
   }
+}
+
+.comment_item .item_img{
+  float: left;
+  text-align: left;
+  margin: 0 20px 0 0;
+  width: 200px;
+  min-height: 250px;
 }
