--- a/Common.css
+++ b/Common.css
@@ -110,7 +110,7 @@ div#footerArea {/*div の内 id=footerArea であるもの*/
 }
 
 @media screen and (max-width: 768px) {
-  .navbar-brand {
+  .navbar-brand{
     float: left;
     height: 50px;
     padding-top: 15px;
@@ -121,7 +121,7 @@ div#footerArea {/*div の内 id=footerArea であるもの*/
 }
 
 @media screen and (min-width: 1024px) {
-  .navbar-brand {
+  .navbar-brand{
     float: left;
     height: 50px;
     padding-top: 15px;
@@ -153,6 +153,28 @@ h5[class="Emphasis"]{
   text-align: center;
 }
 
+h5[class="Emphasis2"]{
+  font-size: 24px;
+  text-align: center;
+  font-style: oblique;
+}
+
+dd{
+  font-size: 12px;
+}
+
+@media screen and (min-width : 768px){/*横幅が768pxを上回った時*/
+  dd{font-size: 14px;}
+}
+
+@media screen and (min-width : 1024px) {/*横幅が1024pxを上回った時*/
+  dd{font-size: 16px;}
+}
+
+@media screen and (min-width : 1536px) {/*横幅が1536pxを上回った時*/
+  dd{font-size: 18px;}
+}
+
 .diary_txt {/*diary_txtクラス*/
   margin:0;
   text-align: left;
@@ -162,6 +184,45 @@ h5[class="Emphasis"]{
 /*about.html*/
 figure[id="Timetable"] img{
   max-width: 170%;
+}
+
+/*about.html タイムテーブル*/
+img[class~="single-Tt"]{
+  max-width: 60%;
+}
+
+/*prepare.html*/
+div[class~="row"] img[class~="double"]{
+  width: 100%;
+  height: 100%;
+}
+
+div[class~="row"] img[class~="single"]{
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width : 768px) {/*横幅が768pxを上回った時*/
+  div[class~="row"] img[class~="double"]{
+    width: 80%;
+    height: 80%;
+  }
+  div[class~="row"] img[class~="single"]{
+    width: 40%;
+    height: 40%;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width : 1024px) {/*横幅が1024pxを上回った時*/
+  div[class~="row"] img[class~="double"]{
+    width: 85%;
+    height: 85%;
+  }
+  div[class~="row"] img[class~="single"]{
+    width: 45%;
+    height: 45%;
+  }
 }
 
 /*traffic.html*/
