--- a/Common.css
+++ b/Common.css
@@ -20,20 +20,6 @@ a[class="navbar-brand"][href="http://www.itolab.nitech.ac.jp/SIG-CCI/"] p{
   color: #111;
   padding: 5px;
   transition: background-color 0.5s, color 0.5s;
-  /**/
-  /*
-  background: -moz-linear-gradient(top,#BFD9E5, #3D95B7 50%,#0080B3 50%,#0099CC);
-	background: -webkit-gradient(linear, left top, left bottom, from(#BFD9E5), color-stop(0.5,#3D95B7), color-stop(0.5,#0080B3), to(#0099CC));
-	color: #FFF;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border: 1px solid #0099CC;
-	-moz-box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
-	-webkit-box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
-	text-shadow: 0px 0px 3px rgba(0,0,0,0.5);
-  padding: 5px;
-  /**/
 }
 
 a[class="navbar-brand"][href="http://www.itolab.nitech.ac.jp/SIG-CCI/"] p:hover{
@@ -54,6 +40,11 @@ ul[class="nav navbar-nav"] a[href="index.html"]::before{
 ul[class="nav navbar-nav"] a[href="about.html"]::before{
   font-family: 'Glyphicons Halflings';
   content: "\e022";/*Halfings での　書類マーク*/
+}
+
+ul[class="nav navbar-nav"] a[href="schedule.html"]::before{
+  font-family: 'Glyphicons Halflings';
+  content: "\e032";/*Halfings での　リストマーク*/
 }
 
 ul[class="nav navbar-nav"] a[href="prepare.html"]::before{
@@ -225,11 +216,6 @@ div#footerArea {/*div の内 id=footerArea であるもの*/
   text-align: left;
   margin: 0 20px 0 0;
   width: 50%;
-  /*min-height: 250px;*/
-  /*
-  text-align: left;
-  width: 210px;
-  */
 }
 /*メッセージ、コンテンツ用*/
 h3[class~="download"]{
@@ -423,3 +409,71 @@ h4.fw-title {
     display: inline;
   }
 }
+
+
+
+/*タイトルバー　開始*/
+div[class="contents"]{
+  margin-top: 17%;
+}
+
+div[class="ribbon-wrap"]{
+  background-color:lightSeaGreen;
+}
+
+h1[class="ribbon-banner"]{
+  text-align: center;
+  font-size: 25px;
+}
+
+ol[class="ribbon-breadcrumb-list"]{
+  font-size: 6px;
+  padding-left: 0px;
+}
+
+ol[class="ribbon-breadcrumb-list"] li{
+  list-style: none;
+}
+
+ol[class="ribbon-breadcrumb-list"] li a{
+  color: white;
+}
+
+ol[class="ribbon-breadcrumb-list"] li a:hover{
+  color: indianRed;
+}
+
+@media screen and (min-width : 768px) {/*横幅が768pxを上回った時*/
+  div[class="contents"]{
+    margin-top: 21%;
+  }
+  ol[class="ribbon-breadcrumb-list"]{
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width : 1024px) {/*横幅が1024pxを上回った時*/
+  div[class="contents"]{
+    margin-top: 16%;
+  }
+}
+
+@media screen and (min-width : 1536px) {/*横幅が1536pxを上回った時*/
+  div[class="contents"]{
+    margin-top: 5.75%;
+  }
+  h1[class="ribbon-banner"]{
+    font-size: 50px;
+  }
+}
+
+li[class~="ribbon-breadcrumb-item"]{
+  display: inline;
+}
+
+li[class="ribbon-breadcrumb-item"] ::after{
+  font-family: 'Glyphicons Halflings';
+  content: "\e080";/*Halfings での　右向き矢印マーク*/
+}
+
+/*タイトルバー　終了*/
