問い合わせの記載を追加した。

--- a/Common.css
+++ b/Common.css
@@ -253,6 +253,10 @@ h5[class="Emphasis3"]{
   font-size: 40px;
 }
 
+p[class="Emphasis_p1"]{
+  font-size: 24px;
+}
+
 h5[class="Sub"]{
   font-size: 10px;
   color: gray;
