--- a/BS_OverWrite.css
+++ b/BS_OverWrite.css
@@ -20,6 +20,10 @@ div[class="navbar-brand footer"]{
   clear: left;
 }
 
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+    max-height: 540px;
+}
+
 @media screen and (min-width : 1536px) {/*横幅が1536pxを上回った時*/
   div[class~="double-fw-Text"]{width: 35%;}
 }
