スポンサーロゴを追加して、サイズを調整した。

--- a/Common.css
+++ b/Common.css
@@ -283,6 +283,13 @@ dd{
   dd{font-size: 18px;}
 }
 
+img[class~="logo"]{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  max-width: 60%;
+}
+
 .diary_txt {/*diary_txtクラス*/
   margin:0;
   text-align: left;
