--- a/Common.css
+++ b/Common.css
@@ -293,9 +293,9 @@ dd{
 }
 
 img[class~="logo"]{
-  border-style: solid;
+/*  border-style: solid;
   border-width: 1px;
-  border-color: black;
+  border-color: black;*/
   max-width: 60%;
 }
 
@@ -515,6 +515,28 @@ li[class~="ribbon-breadcrumb-item"]{
 li[class="ribbon-breadcrumb-item"] ::after{
   font-family: 'Glyphicons Halflings';
   content: "\e080";/*Halfings での　右向き矢印マーク*/
+}
+
+.log-wrap {
+  height: 45px;
+    padding: 5px;
+    margin: auto;
+    border: 1px
+    solid #333333;
+    max-width: 50%;
+    font-size: 23px;
+    font-weight: 600;
+    position: relative;
+}
+
+.log-wrap a {
+    display: inline-block;
+    text-align: center;
+    position: absolute;
+    top: 10;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /*タイトルバー　終了*/
