--- a/Common.css
+++ b/Common.css
@@ -563,4 +563,16 @@ a.ribbon-breadcrumb {
   margin: 30px 0px;
 }
 
+a.navbar-brand.navbar-title {
+    font-weight: 700;
+    padding-left: 40px;
+    font-size: 18px;
+}
+@media screen and (min-width : 768px) {
+  a.navbar-brand.navbar-title {
+    padding-left: 60px;
+    font-size: 20px;
+  }
+}
+
 /*タイトルバー　終了*/
